<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creamyWhite"
    tools:context=".activities.MainActivity"
    android:padding="20dp">

    <!--
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="AppName Blabla"
        android:textAlignment="center"
        android:textColor="@color/partyLipstick"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="50dp"/>

    -->




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:id="@+id/header"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:tint="@color/darkpartyLipstick"
            android:src="@drawable/ic_coronavirus"
             />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="Covid Tracker "
            android:textAllCaps="true"
            android:textColor="@color/darkGrey"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/accepter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/header"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/text_permissions"
            android:textAllCaps="true"
            android:textColor="@color/darkGrey"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAllCaps="true"
            android:textColor="@color/kindaDarkGrey"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/text_permissions_1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAllCaps="true"
            android:textColor="@color/kindaDarkGrey"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/text_permissions_2"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accepter"
        android:layout_marginTop="50dp">

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/darkpartyLipstick"
            android:text="@string/label_conditions"
            android:textColor="@color/darkpartyLipstick"
            android:onClick="openAgreements"
            />


    </LinearLayout>


    <Button
        android:id="@+id/inscrireBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="S'inscrire"
        android:textColor="@color/darkpartyLipstick"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textSize="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-condensed"
        android:onClick="inscrireBtn"

        />


</RelativeLayout>